# erp

./: .env.json  .envrc  .gitignore  .watchmanconfig  bun.lockb  components.json  djlint.toml  eslint.config.js  eslint.config.mjs  flake.nix  globals.d.ts  jsconfig.json  justfile  manage.py  mise.toml  package.json  process-compose.yaml  pyproject.toml  pyrightconfig.json  ruff.toml  svelte.config.ts  tailwind.config.js  tailwind.config.ts  taplo.toml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
accounts/: forms.py  urls.py  views.py
accounts/templates/accounts/: login.html
accounts/templates/components/: logout_dialog.html
accounts/templates/registration/: login.html
api/: .envrc  justfile  pyproject.toml
api/accounts/: admin.py  managers.py  models.py
api/config/: api.py  settings.py  urls.py  wsgi.py
backend/: manage.py  pyproject.toml
backend/erp/: settings.py
components/sidebar/: sidebar.html  sidebar.py
config/: asgi.py  middleware.py  settings.py  urls.py  views.py
custom_auth/: views.py
erp/: asgi.py  settings.py  urls.py  wsgi.py
settings/: urls.py
static/css/: main.css
static/src/: App.svelte  index.js  index.ts  main.css  main.ts
templates/: home.html  index.html
templates/components/: header.html
templates/layouts/: base.html
templates/registration/: login.html
users/: urls.py
web/: .envrc  astro.config.ts  components.json  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  uno.config.ts  vite.config.ts
web/src/: main.tsx  stores.ts
(+35 files in other folders)
