[project]
name = "erp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.5",
    "django-cotton>=1.5.2",
    "docutils>=0.21.2",
    "environs[django]>=14.1.0",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.17.0",
    "djlint>=1.36.4",
]
