[project]
name = "erp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.5",
    "django-components>=0.129",
    "django-cotton>=1.5.2",
    "django-debug-toolbar>=5.0.1",
    "django-expr>=0.1.0",
    "django-formset>=1.7.2",
    "django-tailwind-cli>=4",
    "docutils>=0.21.2",
    "environs[django]>=14.1.0",
]

[dependency-groups]
dev = ["django-browser-reload>=1.17.0", "djlint>=1.36.4"]
typings = ["django-stubs>=5.1.3"]
